@@ -185,14 +185,43 @@ AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
 AT_CLEANUP
 
 
+AT_SETUP([Temporary path invalid])
+AT_KEYWORDS([runmisc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION   DIVISION.
+       PROGRAM-ID.      prog.
+       PROCEDURE        DIVISION.
+           DISPLAY "OK" NO ADVANCING
+           END-DISPLAY.
+           EXIT PROGRAM.
+])
+
+AT_CHECK([TMPDIR="" TMP="notthere" TEMP="" $COMPILE prog.cob], [0], [],
+[libcob: warning: Temporary directory TMP is invalid, adjust TMPDIR!
+])
+AT_CHECK([$COBCRUN_DIRECT ./prog], [0], [OK], [])
+AT_CHECK([TMPDIR="" TMP="" TEMP="./prog.cob" $COMPILE prog.cob], [0], [],
+[libcob: warning: Temporary directory TEMP is invalid, adjust TMPDIR!
+])
+# TMPDIR is only checked when actually needed which is currently only the case
+# for SORT
+#AT_CHECK([TMPDIR="./prog.cob" $COBCRUN_DIRECT ./prog], [0], [OK],
+#[libcob: warning: Temporary directory TEMP is invalid, adjust TMPDIR!
+#])
+#AT_CHECK([COB_DISABLE_WARNINGS=1 TMPDIR="./prog.cob" $COBCRUN_DIRECT ./prog], [0], [OK],
+#[libcob: warning: Temporary directory TEMP is invalid, adjust TMPDIR!
+#])
+
+AT_CLEANUP
+
+
 AT_SETUP([Using full path for cobc])
 AT_KEYWORDS([runmisc])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
        PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
        PROCEDURE        DIVISION.
            DISPLAY "OK" NO ADVANCING
            END-DISPLAY.
@@ -211,8 +240,6 @@ AT_KEYWORDS([runmisc cobc optimization])
 AT_DATA([prog.cob], [
        IDENTIFICATION   DIVISION.
        PROGRAM-ID.      prog.
-       DATA             DIVISION.
-       WORKING-STORAGE  SECTION.
        PROCEDURE        DIVISION.
            DISPLAY "OK" NO ADVANCING
            END-DISPLAY.
